<resources>
    <string name="app_name">RevisionApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_image">Logo image</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to Continue.</string>
    <string name="welcome_to_revisionapp">Welcome to RevisionApp</string>
    <string name="sign_up_to_continue">Sign up to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="profile_picture">Profile picture</string>
    <string name="past_papers">Past papers</string>
    <string name="notes">Notes</string>
    <string name="notes_icon">Notes Icon</string>
    <string name="assignments">Assignments</string>
    <string name="open_forum">Open forum</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="announcements">Announcements</string>
    <string name="view_students">view students</string>
    <string name="edit">Edit</string>
    <string name="profile_icon">profile Icon</string>
    <string name="general">General</string>
    <string name="general_icon">General icon</string>
    <string name="notification_icon">notification_icon</string>
    <string name="dark_mode_icon">Darkmode icon</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="others">Others</string>
    <string name="settings_icon">settings icon</string>
    <string name="contact_us_icon">Contact us icon</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout_icon">Logout icon</string>
    <string name="log_out">Log Out</string>
    <string name="find_all_your_assignments_here">Find all your Assignments Here</string>
    <string name="add_past_paper_icon">Add past paper icon</string>
    <string name="find_all_past_papers_here">Find all past papers Here</string>
    <string name="find_all_notes_here">Find all Notes Here</string>
    <string name="addnote">AddNote</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="nothing_to_show_here_currently">Nothing to show here Currently</string>
    <string name="refresh_icon">refresh icon</string>
    <string name="call">For quick help, please press the call button \n to talk to one of our customer care agent</string>
    <string name="call_icon">call icon</string>
    <string name="save">Save</string>
</resources>