<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.revisionapp.viewModels.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_top_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Euster Doya"
                android:textColor="#3B3BB5"
                android:textSize="22sp"
                android:layout_marginStart="@dimen/normal_spacing"
                android:layout_marginTop="@dimen/medium_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="edoya@gmail.com"
                android:textColor="#3B3BB5"
                android:textSize="22sp"
                android:layout_marginStart="@dimen/normal_spacing"
                android:layout_marginTop="@dimen/small_spacing"
                android:layout_marginBottom="@dimen/normal_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_tv"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_spacing"
                app:srcCompat="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/profile_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alignmentMode="alignMargins"
            android:rowCount="3"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_layout"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/notes_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardCornerRadius="@dimen/small_spacing"
                android:layout_margin="@dimen/normal_spacing"
                android:onClick="@{()->viewModel.onCardClick(0)}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/normal_spacing"
                    android:layout_gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_notes_24"
                        android:contentDescription="@string/notes_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notes"
                        android:gravity="center"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/past_papers_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardCornerRadius="@dimen/small_spacing"
                android:layout_margin="@dimen/normal_spacing"
                android:onClick="@{()->viewModel.onCardClick(1)}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/normal_spacing"
                    android:layout_gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_library_books_24"
                        android:contentDescription="@string/notes_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/past_papers"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/assignments_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardCornerRadius="@dimen/small_spacing"
                android:layout_margin="@dimen/normal_spacing"
                android:onClick="@{()->viewModel.onCardClick(2)}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/normal_spacing"
                    android:layout_gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_assignment_24"
                        android:contentDescription="@string/notes_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/assignments"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/forum_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardCornerRadius="@dimen/small_spacing"
                android:layout_margin="@dimen/normal_spacing"
                android:onClick="@{()->viewModel.onCardClick(3)}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/normal_spacing"
                    android:layout_gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_forum_24"
                        android:contentDescription="@string/notes_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_forum"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardCornerRadius="@dimen/small_spacing"
                android:layout_margin="@dimen/normal_spacing"
                android:onClick="@{()->viewModel.onCardClick(4)}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/normal_spacing"
                    android:layout_gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_person_24"
                        android:contentDescription="@string/notes_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardCornerRadius="@dimen/small_spacing"
                android:layout_margin="@dimen/normal_spacing"
                android:onClick="@{()->viewModel.onCardClick(5)}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/normal_spacing"
                    android:layout_gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_help_24"
                        android:contentDescription="@string/notes_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>